# ML

./: .gitignore  README.md
exp_sliding_average/: CMakeLists.txt
exp_sliding_average/src/: main.cpp
polynom_regression/: CMakeLists.txt
polynom_regression/src/: MainWindow.cpp  MainWindow.h  _main.cpp  logic.cpp  logic.h  logic_linear.cpp  logic_linear.h  logic_polynominal.cpp  logic_polynominal.h  main.cpp
regressions/: CMakeLists.txt
regressions/src/: main.cpp
regressions/src/Common/: PrintUtils.h  TensorUtils.h  Types.h  Utils.h
regressions/src/classification/: Classification.cpp  Classification.h
regressions/src/clustering/: ClusteringKMeans.cpp  ClusteringKMeans.h
regressions/src/gnuplot/: GnuPlot.cpp  GnuPlot.h
regressions/src/regressions/: Classification.cpp  Classification.h  IRegression.h  LinearRegression.cpp  LinearRegression.h  Logistic2ParamRegression.cpp  Logistic2ParamRegression.h  LogisticRegression.cpp  LogisticRegression.h  PolynomialRegression.cpp  PolynomialRegression.h
regressions/src/ui/: MainWindow.cpp  MainWindow.h
regressions/tests/: Matrix_test.cpp
